# labs

./: .gitignore
Lab1/: CMakeLists.txt  integer.cpp  integer.hpp  main.cpp
Lab2/: CMakeLists.txt  Particle.hpp  Space.cpp  Space.hpp  Vector.hpp  config.hpp  demos.cpp  demos.hpp  main.cpp
Lab3/: CMakeLists.txt  GraphBuilder.cpp  GraphBuilder.hpp  color.hpp  fourier.hpp  main.cpp
Lab4/Task1/: main.cpp
Lab4/Task2/: CMakeLists.txt  main.cpp
Lab5/: CMakeLists.txt  lab.cpp  lab.hpp  main.cpp  main.lab  polish.cpp  polish.hpp  vars.cpp  vars.hpp
Term1/Lab1/: README.md
Term1/Lab2/: CMakeLists.txt  Particle.hpp  Space.cpp  demos.cpp
Term1/Lab3/: fourier.hpp
Term1/Lab4/Task2/: main.cpp
Term1/Lab6/: main.cpp  out.txt
Term2/Lab1/: Message.cpp
Term2/Lab2/A/: Array.hpp
Term2/Lab3/A/: main.cpp  sorting.hpp
Term2/Lab3/B/: README.md  benchmark.cpp
Term2/Lab3/С/: main.cpp  sorting.hpp
Term2/Lab5/: Algo.hpp  benchmark.cpp  interactive.cpp  main.cpp
Term2/Lab6/Benchmarks/: benchmark.txt
Term2/Lab6/src/: AVL.hpp  List.hpp
Term3/Algorithms/Lab1/: ExternalSort.hpp  test.cpp
Term3/Algorithms/Lab2/: main.cpp
Term3/Databases/Lab1/: CMakeLists.txt
Term3/OOP/Lab1/: CMakeLists.txt
Term3/OOP/Lab2/: FileTree.cpp  FileTree.hpp  Lab2.pro  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
Term3/OOP/build-Lab2-Desktop_Qt_5_15_1_GCC_64bit-Debug/: Lab2
Term4/Algo/Lab1/: CMakeLists.txt  HashTable.hpp  main.cpp
Term4/Algo/Lab2/: CMakeLists.txt  PrintTree.hpp  main.cpp  (+2 more)
Term4/Lab1/: CMakeLists.txt  Space.cpp  Space.hpp  demos.cpp  main.cpp
Term4/Lab1/doc/html/: _c_make_c_compiler_id_8c.html  _config_8hpp.html  _config_8hpp_source.html  _demos_8cpp.html  _h_s_v_8hpp.html  _h_s_v_8hpp_source.html  _particle_8hpp.html  _particle_8hpp_source.html  _random_8cpp.html  _random_8hpp.html  _space_8cpp.html  _space_8hpp_source.html  annotated.html  class_particle-members.html  class_vector-members.html  dir_1a54879d5638b92ef92af7e10abac6f3.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f19ed6069cd8d270d4bb8ad7e908eb6c.html  files.html  functions_func.html  functions_vars.html  globals_defs.html  globals_func.html  main_8cpp.html  test_8cpp.html
Term4/Lab1/doc/html/search/: all_10.js  all_12.js  all_4.js  all_6.js  all_9.js  all_b.js  all_e.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_9.js
Term4/Lab1/doc/latex/: _config_8hpp.tex  _demos_8cpp.tex  _h_s_v_8hpp.tex  _particle_8hpp.tex  _space_8cpp.tex  class_vector.tex  dir_1a54879d5638b92ef92af7e10abac6f3.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  files.tex  refman.tex  test_8cpp.tex
Term4/Lab1/include/: Config.hpp  Demos.hpp  HSV.hpp  Random.hpp  Space.hpp
Term4/Lab1/src/: Demos.cpp  Space.cpp  main.cpp
Term4/Lab3a/: CMakeLists.txt  Graph.hpp  Multisort.hpp  benchmark.cpp  main.cpp  test.cpp
Term4/Lab3a/doc/html/: annotated.html  benchmark_8cpp.html  class_graph-members.html  class_graph.html  classes.html  files.html  functions_func.html  functions_vars.html  index.html
Term4/Lab3a/doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_a.js  all_c.js  defines_0.js  files_1.js  files_2.js  functions_3.js  functions_4.js  functions_8.js  functions_a.js  functions_c.js
Term4/Lab3a/doc/latex/: _graph_8hpp.tex  class_graph.tex  main_8cpp.tex  refman.tex  test_8cpp.tex
Term4/Lab3a/html/: _graph_8hpp_source.html  _multisort_8hpp_source.html  annotated.html  class_graph-members.html  class_graph.html  classes.html  files.html  index.html
Term4/Lab3a/html/search/: classes_0.js
Term4/Lab3a/latex/: annotated.tex  class_graph.tex  refman.tex
Term5/OS/Lab1/: CMakeLists.txt  ClientServer.hpp  Config.hpp  Functions.hpp  Manager.hpp  Server.hpp  TrialFunc.hpp  main.cpp
Term5/OS/Lab1/supplementary/: compfuncs.hpp  lab1_cpp.tar.xz  test.cpp  trialfuncs.hpp
Term6/Cryptology/Lab1/: .gitignore  CMakeLists.txt  Data.cpp  Data.hpp  data.cpp  data.hpp  des.cpp  des.hpp  des_perm.hpp  kce.hpp  main.cpp
Term6/Cryptology/Lab1/test/: Data.cpp  des.cpp
Term6/OOP/: docker-compose.yml
Term8/IS/: .gitignore
semester1/Lab1/: integer.cpp
semester1/Lab2/: config.hpp
semester1/Lab5/: main.lab
semester2/Lab1/: CMakeLists.txt  Database.hpp  Message.cpp  Message.hpp  README.md  Time.hpp  benchmark.cpp  interactive.cpp  interactive.hpp  main.cpp
semester2/Lab2/A/: Array.hpp  CMakeLists.txt  Container.hpp  List.hpp  README.md  Vector.hpp  benchmark.cpp  main.cpp
semester2/Lab2/A/Benchmarks/: bench.txt
semester2/Lab3/B/Lab1/: CMakeLists.txt  Database.hpp  Message.cpp  Time.hpp  interactive.cpp  interactive.hpp
semester2/Lab4/: BinaryTree.hpp  CMakeLists.txt  FileSystem.hpp  README.md  Tree.hpp  main.cpp
semester2/Lab5/: Algo.hpp  CMakeLists.txt  Graph.hpp  README.md  benchmark.cpp  main.cpp
semester2/Lab6/: AVL.hpp  CMakeLists.txt  Container.hpp  List.hpp  README.md  Tree.hpp  Vector.hpp  benchmark.cpp  interactive.cpp  main.cpp
year1/semester2/Lab2/B/: CMakeLists.txt  Set.hpp  journal.cpp  shooter.cpp
year1/semester2/Lab5/: CMakeLists.txt
year1/semester2/Lab5/Benchmarks/: bench.txt
year2/semester1/OOP/Lab1/: Algo.hpp  CMakeLists.txt  Graph.hpp  README.md  test.cpp
year2/semester1/OOP/Lab1/doc/html/: _algo_8hpp_source.html  class_graph-members.html  class_graph.html  class_shape-members.html  class_shape.html  classes.html  functions_func.html  functions_rela.html  struct_graph_1_1_edge-members.html
year2/semester1/OOP/Lab1/doc/html/search/: all_3.js  functions_3.js  functions_4.js  searchdata.js
year2/semester1/OOP/Lab1/doc/latex/: annotated.tex  class_shape.tex  refman.tex
year2/semester1/OOP/Lab1/src/: Algo.hpp  Graph.hpp  Shape.hpp  main.cpp
year2/semester1/OOP/Lab1/src/FunctionBuilder/: FunctionBuilder.cpp  FunctionBuilder.hpp  color.hpp
year2/semester1/OOP/Lab1/tests/: graph_test.cpp  shape_test.cpp
(+465 files in other folders)
